2009-09-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#134893 - 'scanning' control panel plugins have negative
	use-time behaviour

	* src/util/hd-transition.c (on_decor_progress_timeline_new_frame):
	Don't animate when the display is off.

2009-09-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#139902 - Desktop updates screen although screen has blanked

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_texture_update_area): Return
	without doing anything if the display is off.
	* src/launcher/hd-app-mgr.c (hd_app_mgr_mce_activate_accel): Do not
	touch the MCE_DISPLAY_SIG signal D-Bus matches, that's always needed.
	* src/util/hd-dbus.c (hd_dbus_init): Add match for MCE_DISPLAY_SIG.

2009-09-23  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#140332 - smooth fade out to the loading screen screenshot

	* src/util/hd-transition.c
	* src/util/hd-transition.h: added hd_transition_fade_out_loading_screen
	  to fade out the loading screen, also extra checks to  
	* data/transitions.ini: added duration_out to launcher_launch for
	  setting duration of the fade out.	
	* src/home/hd-render-manager.c: Now ensure that we call 
	  hd_transtion_fade_out on the loading screen, to make it fade out
	  slowly.	  

2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Speed up building and package creation, for bifh user's pleasure.

	* debian/rules:
	  autogen.sh only if ./configure doesn't exist yet.
	* Makefile.am:
	  Don't build the test programs.
	* src/home/Makefile.am:
	  Remove trailing whitespace, who knows what did it cause.

2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Plug in memory leaks.

	* src/home/hd-render-manager.c (hd_render_manager_append_geo_cb):
	  First decide we need @geo then allocate memory for it.
	* src/util/hd-volume-profile.c (hd_volume_profile_is_silent):
	  free() strings returned by libprofile.

2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
